Add role-based access: shared companies, private applications, officer oversight